incorporating google doc edits and citations

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -9735,6 +9735,26 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\9P3U57MI\\Wright et al. - 2006 - Gradients of light availability and leaf traits wi.pdf;C\:\\Users\\Me\\Zotero\\storage\\389U4NAL\\FP05319.html;C\:\\Users\\Me\\Zotero\\storage\\X856CWXW\\FP05319.html}
 }
 
+@article{wrightWorldwideLeafEconomics2004,
+  title = {The Worldwide Leaf Economics Spectrum},
+  author = {Wright, Ian J. and Reich, Peter B. and Westoby, Mark and Ackerly, David D. and Baruch, Zdravko and Bongers, Frans and Cavender-Bares, Jeannine and Chapin, Terry and Cornelissen, Johannes H. C. and Diemer, Matthias and Flexas, Jaume and Garnier, Eric and Groom, Philip K. and Gulias, Javier and Hikosaka, Kouki and Lamont, Byron B. and Lee, Tali and Lee, William and Lusk, Christopher and Midgley, Jeremy J. and Navas, Marie-Laure and Niinemets, Ülo and Oleksyn, Jacek and Osada, Noriyuki and Poorter, Hendrik and Poot, Pieter and Prior, Lynda and Pyankov, Vladimir I. and Roumet, Catherine and Thomas, Sean C. and Tjoelker, Mark G. and Veneklaas, Erik J. and Villar, Rafael},
+  date = {2004-04},
+  journaltitle = {Nature},
+  volume = {428},
+  number = {6985},
+  pages = {821--827},
+  publisher = {{Nature Publishing Group}},
+  issn = {1476-4687},
+  doi = {10.1038/nature02403},
+  url = {https://www.nature.com/articles/nature02403},
+  urldate = {2021-07-27},
+  abstract = {Bringing together leaf trait data spanning 2,548 species and 175 sites we describe, for the first time at global scale, a universal spectrum of leaf economics consisting of key chemical, structural and physiological properties. The spectrum runs from quick to slow return on investments of nutrients and dry mass in leaves, and operates largely independently of growth form, plant functional type or biome. Categories along the spectrum would, in general, describe leaf economic variation at the global scale better than plant functional types, because functional types overlap substantially in their leaf traits. Overall, modulation of leaf traits and trait relationships by climate is surprisingly modest, although some striking and significant patterns can be seen. Reliable quantification of the leaf economics spectrum and its interaction with climate will prove valuable for modelling nutrient fluxes and vegetation boundaries under changing land-use and climate.},
+  issue = {6985},
+  langid = {english},
+  annotation = {Bandiera\_abtest: a Cg\_type: Nature Research Journals Primary\_atype: Research},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\2N5BNMTD\\Wright et al. - 2004 - The worldwide leaf economics spectrum.pdf;C\:\\Users\\Me\\Zotero\\storage\\M88ZBT7D\\nature02403.html}
+}
+
 @article{wuGrowthDeclineLinked2012,
   title = {Growth {{Decline Linked}} to {{Warming}}-{{Induced Water Limitation}} in {{Hemi}}-{{Boreal Forests}}},
   author = {Wu, Xiuchen and Liu, Hongyan and Guo, Dali and Anenkhonov, Oleg A. and Badmaeva, Natalya K. and Sandanov, Denis V.},
