--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -198,24 +198,26 @@ With adequate water, species with smaller leaves (higher $g_a$) and larger $g_s$
 
 **These basic biophysical principles shape the propensities for $T_{leaf}$ to be elevated above $T_{air}$ across vertical gradients in closed-canopy forests.**
 High radiation at the top of the vertical profile (Fig. `r fig_NEON_vertical`) implies that canopy leaves have much greater propensity for high $T_{leaf}-T_{air}$, such that they would be expected to be warmer than understory leaves under most conditions (Fig. `r fig_leaf_T`).
-However, higher wind speeds (e.g., up to ~4 $ms^{-1}$ at NEON sites; Fig. `r fig_NEON_vertical`) are capable of lowering $T_{leaf}-T_{air}$ upto ~ 4$^\circ$C [Fig. `r fig_leaf_T`b, @bonan_ecological_2016; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. Collectively, higher windspeed (Fig. `r fig_NEON_vertical`), and with adaptive leaf traits increase $g_a$ and $g_s$ (reviewed below) give upper canopy leaves lower sensitivity to intercepted radiation (Fig. `r fig_leaf_T`a) and higher rates of heat loss (Fig. `r fig_leaf_T`b-e). ~In contrast, greater RH and lower wind speeds in the understory may stifle ??E(through reduced gs and ga), thereby increasing Tleaf (Fig. 3, Perez & Feeley, 2018; Tibbitts, 1979).~
+However, higher wind speeds (e.g., up to ~ 4$ms^{-1}$ at NEON sites; Fig. `r fig_NEON_vertical`) are capable of lowering $T_{leaf}-T_{air}$ upto ~ 4$^\circ$C [Fig. `r fig_leaf_T`b, @bonan_ecological_2016; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. Collectively, higher wind speed (Fig. `r fig_NEON_vertical`), and with adaptive leaf traits increase $g_a$ and $g_s$ (reviewed below) give upper canopy leaves lower sensitivity to intercepted radiation (Fig. `r fig_leaf_T`a) and higher rates of heat loss (Fig. `r fig_leaf_T`b-e). In contrast, greater RH and lower wind speeds in the understory may stifle $\lambda E$ (through reduced $g_s$ and $g_a$), thereby increasing $T_{leaf}$ [Fig. `r fig_leaf_T`, @perezIncreasingHumidityThreatens2018; @tibbittsHumidityPlants1979b].
 
-**Vertical $T_{leaf}$ gradients can also vary with canopy structure (Fig. `r fig_leaf_T`).**
-$T_{leaf}$ generally tracks $T_{air}$, where vertical gradients of $T_{air}$ depend on canopy structure and LAI [@leuzingerTreeSpeciesDiversity2007;@mullerEvidenceEfficientNonevaporative2021]. Closed canopies, and high LAI canopies act as an umbrella, absorbing most of the incoming radiation and preventing vertical air mixing in the understory microclimate. The intensity of incoming radiation and VPD in the upper canopy can limit $g_s$. Therefore, we would expect a stronger $T_{leaf}$ gradient where upper canopy leaves can reach much warmer temperatures than below canopies layers [@millerOnlySunlitLeaves2021]. In contrast, open canopies, or lower canopy LAI allow more vertical air mixing and sunlight into the understory, that can either neutralize a $T_{leaf}$ gradient or elevate below canopy $T_{leaf}-T_{air}$ of shade leaves more than upper canopy as in the case of the 'canopy greenhouse effect' or sunflecks, as mentioned above [@hardwickRelationshipLeafArea2015; @schymanskiStomatalControlLeaf2013b], and also due to the propensity of shade leaves for lower $g_s$ and greater thermal capacitance (capacity to hold heat) [@schymanskiStomatalControlLeaf2013b]. 
+**Vertical $T_{leaf}$ gradients are also expected to vary with canopy structure (Fig. `r fig_leaf_T`).**
+$T_{leaf}$ generally tracks $T_{air}$, where vertical gradients of $T_{air}$ depend on canopy structure and LAI [@leuzingerTreeSpeciesDiversity2007;@mullerEvidenceEfficientNonevaporative2021]. Closed canopies, and high LAI canopies act as an umbrella, absorbing most of the incoming radiation and preventing vertical air mixing in the understory microclimate. The intensity of incoming radiation and VPD in the upper canopy, combined with hydraulic challenges of water transport to the tops of tall trees [**REFS**], can cause $g_s$-limitation. Therefore, we would expect a stronger $T_{leaf}$ gradient where upper canopy leaves can reach much warmer temperatures than lower canopies layers [@millerOnlySunlitLeaves2021]. In contrast, open canopies (lower canopy LAI) allow more vertical air mixing and sunlight into the understory, and this can either neutralize a $T_{leaf}$ gradient or elevate $T_{leaf}-T_{air}$ of the lower canopy more than that of the upper canopy as in the case of the 'canopy greenhouse effect' or sunflecks, as mentioned above [@hardwickRelationshipLeafArea2015; @schymanskiStomatalControlLeaf2013b], and also due to the propensity of shade leaves for lower $g_s$ and greater thermal capacitance (capacity to hold heat) [@schymanskiStomatalControlLeaf2013b]. 
 
 **Within closed-canopy forests vertical gradients, the propensity for $T_{leaf}$ to be elevated above $T_{air}$ are expected to vary with micrometeorological conditions (Fig. `r fig_leaf_T`).**
-Under hot conditions, higher wind speeds and $g_a$ enable cooling, but at lower wind conditions, thickness of air layer at the leaf surface curbs rapid leaf-to-air heat transfer, limiting $g_a$ and increasing $T_{leaf} - T_{air}$ [Fig. `r fig_leaf_T`b, @martin_boundary_1999; @leighInfluenceLeafSize2017; @robertsStomatalBoundaryLayerConductances1990a; @songTreeSurfaceTemperature2020]. 
-Thus, understory leaves, which typically experience lower windspeeds (Fig. `r fig_NEON_vertical`), would retain more heat.
-The higher-RH conditions of the understory (Fig. `r fig_NEON_vertical`) would also inhibit cooling, as $\lambda E$ is stifled under high RH, resulting in  greater $T_{leaf}$-$T_{air}$ [Fig. `r fig_leaf_T`c, @songTreeSurfaceTemperature2020; @tibbittsHumidityPlants1979b; @perezIncreasingHumidityThreatens2018; @konradLeafTemperatureIts].
-Thus, understory leaves and within canopy shade leaves can remain cooler under lower radiation load, but their environment is not conducive to shedding excess heat, which in combination with their physiological propensities can result in greater $T_{leaf}$ under slight heat stress [@leighInfluenceLeafSize2017; @songTreeSurfaceTemperature2020; @schymanskiStomatalControlLeaf2013b; @zweifelMiddayStomatalClosure2002]. 
-In contrast, under drought conditions (hot and dry, with higher-than-average solar radiation), when $g_s$ is limiting, there will be a propensity for $T_{leaf} - T_{air}$ to be elevated more in the canopy than the understory (Fig.`r fig_leaf_T`).
-Because sun leaves are exposed to higher irradiance and $VPD$, their $g_s$-limitation is steeper that that of shade leaves, resulting in greater increases in $T_{leaf}$ when $g_s$ is reduced [Fig. `r fig_leaf_T`e, @leighInfluenceLeafSize2017; @fauset_differences_2018]. 
+Under drought conditions (hot and dry, with higher-than-average solar radiation), when $g_s$ is limiting, there will be a propensity for $T_{leaf} - T_{air}$ to be elevated more in the canopy than the understory (Fig.`r fig_leaf_T`).
+Because sun leaves are exposed to higher irradiance and VPD, their $g_s$-limitation is steeper than that of shade leaves, resulting in greater increases in $T_{leaf}$ when $g_s$ is reduced [Fig. `r fig_leaf_T`e, @leighInfluenceLeafSize2017; @fauset_differences_2018]. 
+In contrast, under hot and wet conditions, higher wind speeds and $g_a$ enable cooling, but at lower wind conditions, thickness of air layer at the leaf surface curbs rapid leaf-to-air heat transfer, limiting $g_a$ and increasing $T_{leaf} - T_{air}$ [Fig. `r fig_leaf_T`b, @martin_boundary_1999; @leighInfluenceLeafSize2017; @robertsStomatalBoundaryLayerConductances1990a; @songTreeSurfaceTemperature2020]. 
+Thus, while understory and within-canopy shade leaves can remain cooler under lower radiation load, their environment is not conducive to shedding excess heat, which in combination with their physiological propensities can result in greater $T_{leaf}$ under slight heat stress [@leighInfluenceLeafSize2017; @songTreeSurfaceTemperature2020; @schymanskiStomatalControlLeaf2013b; @zweifelMiddayStomatalClosure2002].
+Understory leaves, which typically experience lower windspeeds (Fig. `r fig_NEON_vertical`), would retain more heat.
+The higher-RH conditions of the understory (Fig. `r fig_NEON_vertical`) would also inhibit cooling, as $\lambda E$ is stifled under high RH, resulting in  greater $T_{leaf}$-$T_{air}$ [Fig. `r fig_leaf_T`c, @songTreeSurfaceTemperature2020; @tibbittsHumidityPlants1979b; @perezIncreasingHumidityThreatens2018; @konradLeafTemperatureIts2021].
+
 
 ### In situ observations
-**Following the principles outlined above, vertical microclimate profiles, leaf traits (see "Leaf Traits" section), and $g_s$ (see "Leaf metabolism and thermal responses" section) together explain in situ $T_{leaf}$ observations.** 
-Often, $T_{leaf}$ tracks $T_{air}$, *in large part due to vertical gradients in leaf traits and $g_s$* / ~due to high evapotranspiration~, and therefore differs little between understory and canopy.
+
+**Following the principles outlined above, vertical microclimate profiles, leaf traits, and $g_s$ together explain *in situ* $T_{leaf}$ observations.** 
+Often, $T_{leaf}$ tracks $T_{air}$, *in large part due to vertical gradients in leaf traits and $g_s$* and therefore differs little between understory and canopy.
 In forests with dense canopies, including tropical and temperate broadleaf forests, leaves experience greater $T_{leaf} - T_{air}$ and higher maximum $T_{leaf}$ in the upper canopies than buffered lower-canopies, sometimes exceeding optima for photosynthesis ($T_{opt}$) and $T_{air}$, because of $g_s$-limitation and high solar radiation loads [@carterExperimentalWarmingTropical; @niinemetsShapeLeafPhotosynthetic1999; @doughtyAreTropicalForests2008; @fauset_differences_2018; @mauTemperateTropicalForest2018a; @millerOnlySunlitLeaves2021; @rey-sanchez_spatial_2016; @mauTemperateTropicalForest2018a; @rey-sanchez_spatial_2016; @pauTropicalForestTemperature2018]. 
-In contrast, in open forests with lower LAI, lower-canopy $T_{leaf}$ can equal or even exceed upper canopy $T_{leaf}$, due to greater light permeability, vertical air mixing, and still air in the lower canopy and heating from the ground [Figs. `r fig_NEON_vertical`h, `r SIfig_NEON_all`b,e, @mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002; @hadleyInfluenceKrummholzMat1987;@rey-sanchez_spatial_2016]. 
+In contrast, in open forests with lower LAI, lower-canopy $T_{leaf}$ can equal or even exceed upper canopy $T_{leaf}$, due to greater light permeability, vertical air mixing, and still air in the lower canopy and heating from the ground [Figs. `r fig_NEON_vertical`h, `r SIfig_NEON_all`b,e, @mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002; @hadleyInfluenceKrummholzMat1987]. 
 Similarly, in very open forests or savannas, trees growing close to the ground can experience greater heat stress in their lower than upper canopies [@hadleyInfluenceKrummholzMat1987; @curtis_intracanopy_2019; @johnstonWhatLiesVertical2020 (in review)]. 
 Greater $RH$ in inner canopy can also increase $T_{leaf}$ relatively more than upper canopy $T_{leaf}$ [@dietzVerticalPatternsDuration2007]. 
 
@@ -237,7 +239,7 @@ However, when it comes to understanding and modeling forest ecosystem function, 
 ### Intraspecific variation
 
 Within-canopy, leaf traits vary along the canopy light gradient [*i.e.,* in sun and shade leaves, @casasSunShadeLeaves2011] at a leaf anatomical, structural and biochemical level [Table `r table_leaf_traits`, @sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020]. 
-As much of our understanding of trait coordination is based on the leaf economics spectrum concept (Wright et al. 2004) was developed using sun leaves [@chenLeafEconomicsSpectrum2020; @keenanGlobalLeafTrait2016], further research is needed to characterize trait relationships and responses through the vertical canopy. 
+As much of our understanding of trait coordination is based on the leaf economics spectrum concept (@wrightWorldwideLeafEconomics2004) which was developed using sun leaves [@chenLeafEconomicsSpectrum2020; @keenanGlobalLeafTrait2016], further research is needed to characterize trait relationships and responses through the vertical canopy. 
 It has been established that independent of light environment, traits also vary within species along the ontogenetic trajectory from the understory to the canopy. For example, LMA, photosynthetic capacity (per area) and $g_s$ have been observed to increase with height, separate from light [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012; @cavender-baresChangesDroughtResponse2000]. Therefore, ontogeny is bound to play a role in thermal sensitivity [@carterExperimentalWarmingTropical 2021; @niinemetsResponsesForestTrees2010a]. 
 
 ![Table `r table_leaf_traits`. (*For latest version of table, see tables.pdf.*)](table1.png)
@@ -253,28 +255,25 @@ nocite: |
 
 #### (Anatomical, Morphological and Physiological traits)
 
-Sun leaves in the exposed canopy have traits that help avoid heat and water stress -- for instance, being smaller, hairier, and with higher vein density than shade leaves [@leighInfluenceLeafSize2017; @vogelConvectiveCoolingLow1970; @sackHowStrongIntracanopy2006; @zwienieckiHydraulicLimitationsImposed2004;@mathurPhotosyntheticEfficiencySun2018a], and with steeper leaf-angle [@niinemetsAdjustmentFoliageStructure1998, *REF*]. These traits (Table 1) collectively aid heat dissipation and regulate $T_{leaf}$-photosynthetic balance. In contrast, shade leaves have traits that maximize light capture in the diffused-light environment with sunflecks (e.g., lower LMA), but are more likely to get overheated than sun leaves due to greater thermal capacitance [@leighInfluenceLeafSize2017; @casasSunShadeLeaves2011; @schymanskiStomatalControlLeaf2013b]. In open canopies where light is comparatively homogeneous, exposed leaves are primarily shaped by $T_{air_{max}}$ and $VPD$ stress, rather than solely by light [@mediavillaFoliarPlasticityRelated2019a].
+Sun leaves in the exposed canopy have traits that help avoid heat and water stress -- for instance, by being smaller, hairier, and with higher vein density than shade leaves [Table 1, @leighInfluenceLeafSize2017; @vogelConvectiveCoolingLow1970; @sackHowStrongIntracanopy2006; @zwienieckiHydraulicLimitationsImposed2004;@mathurPhotosyntheticEfficiencySun2018a], and with steeper leaf-angle [@niinemetsAdjustmentFoliageStructure1998, *REF*]. These traits collectively aid heat dissipation and regulate $T_{leaf}$-photosynthetic balance. In contrast, shade leaves have traits that maximize light capture in the diffused-light environment with sunflecks (e.g., lower LMA), but are more likely to get overheated than sun leaves due to greater thermal capacitance [@leighInfluenceLeafSize2017; @casasSunShadeLeaves2011; @schymanskiStomatalControlLeaf2013b]. In open canopies where light is comparatively homogeneous, exposed leaves are primarily shaped by $T_{air_{max}}$ and $VPD$ stress, rather than solely by light [@mediavillaFoliarPlasticityRelated2019a].
 
 #### (Biochemical and elemental traits, and isoprenes)
 
+Elemental traits, such as $N_{area}$ and $P_{area}$, contribute to activities of high leaf metabolism, including respiration [@meirLeafRespirationTwo2001;@weerasingheCanopyPositionAffects2014] and photosynthetic processes in sun leaves [Table 1, @scartazzaInvestigatingEuropeanBeech2016; @niinemetsWithincanopyVariationRate2004a; @weerasingheCanopyPositionAffects2014]. Within-canopy leaf nitrogen distribution can be regulated to prevent photoinhibition in shade leaves during sunflecks, and direct light for sun leaves [@kitaoCanopyNitrogenDistribution2018]. Therefore, we would expect elemental traits to influence vertical foliar thermal sensitivity;  however, @zhuPlasticityPhotosyntheticHeat2018 and @osullivanThermalLimitsLeaf2017 observed no relation between foliar thermal tolerance and total foliar concentrations of N and P.
+
 Biochemical protection against foliage light and heat damage also increases with irradiance, and thus tends to be higher in the upper canopy than in the understory (Table 1). 
-Caratenoids and xanthophyll cycle pigments -- violaxanthin, antheraxanthin and zeaxanthin ($VAZ$) -- can play a role in antioxidant scavenging and converting excess excitation energy into heat to reduce photoinhibition [@niinemetsPhotosynthesisResourceDistribution2007a; @mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. The dissipation of excess light energy is also important for leaf acclimation to higher temperature if high $T_{leaf}$ impairs the photochemical energy dissipation pathway [@havauxTemperaturedependentAdjustmentThermal1996].
-
-Elemental traits, such as $N_{area}$ and $P_{area}$, contribute to activities of high leaf metabolism, including respiration [@meirLeafRespirationTwo2001;@weerasingheCanopyPositionAffects2014] and photosynthetic processes in sun leaves [Table 1, @scartazzaInvestigatingEuropeanBeech2016; @niinemetsWithincanopyVariationRate2004a; @weerasingheCanopyPositionAffects2014]. Within-canopy leaf nitrogen distribution can be regulated to prevent photoinhibition in shade leaves during sunflecks, and direct light for sun leaves [@kitaoCanopyNitrogenDistribution2018]. Therefore, we would expect elemental traits to influence vertical foliar thermal sensitivity,  however, @zhuPlasticityPhotosyntheticHeat2018 and @osullivanThermalLimitsLeaf2017 observed no relation between foliar thermal tolerance and total foliar concentrations of N and P.  
-
-Further, higher heat tolerance in exposed canopies is facilitated by isoprenes in species capable of emitting isoprenes [*REF*].
+Caratenoids and xanthophyll cycle pigments -- violaxanthin, antheraxanthin and zeaxanthin ($VAZ$) -- can play a role in antioxidant scavenging and converting excess excitation energy into heat to reduce photoinhibition [@niinemetsPhotosynthesisResourceDistribution2007a; @mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. The dissipation of excess light energy is also important for leaf acclimation to higher temperature if high $T_{leaf}$ impairs the photochemical energy dissipation pathway [@havauxTemperaturedependentAdjustmentThermal1996].Further, higher heat tolerance in exposed canopies is facilitated by isoprenes in species capable of emitting isoprenes [**REF**].
 
 #### (Leaf lifecycles)
 
 Leaf age affects vulnerability to heat stress independent of light environment [e.g., Marias et al. 2017], and has a strong effect on metabolism [@kikuzawaSynthesisRelationshipsLeaf2006], including photosynthesis and respiration, and their temperature sensitivities [@zhouLeafageEffectsTemperature2015; @niinemetsLeafAgeDependent2016].
 *In evergreen species,* sun leaves have shorter lifespans than shade leaves; upper canopy leaves are on average younger than subcanopy leaves, therefore operating closer to their photosynthetic optimum. However, because leaf turnover rates of sun leaves in the upper canopy are faster than in the subcanopy, less damage  accumulates [@millerOnlySunlitLeaves2021].
-Once leaves are fully expanded and mature, heat tolerance decreases with leaf age [@zhouLeafageEffectsTemperature2015; REFS], as do $g_s$ and photosynthesis [with a few exceptions between species, @niinemetsLeafAgeDependent2016]. 
+Once leaves are fully expanded and mature, heat tolerance decreases with leaf age [@zhouLeafageEffectsTemperature2015; REFS], as do $g_s$ and photosynthesis [with a few exceptions, @niinemetsLeafAgeDependent2016]. 
 Additionally, because older leaves reach maximum $T_{leaf}$ sooner than younger leaves and can occupy a large part of the canopy, this would affect vertical gradient of thermal sensitivity [@zhouLeafageEffectsTemperature2015] **this needs some confirming by co-authors**.
 
 The timing of seasonal leaf loss or gain is influenced by vertical microclimate gradients, and in turn can alter biophysical and $T_{leaf}$ gradients in the forest [@rey-sanchez_spatial_2016].
-Deciduousness in tropical forests is an adaptation to conserve water that is more common in dry than wet tropical forests. 
+Deciduousness in tropical forests is an adaptation to conserve water, and is more common in drier forests and in canopy species [@conditQuantifyingDeciduousnessTropical2000c; @meakemRoleTreeSize2018]. 
 Within tropical deciduous species, the fraction of deciduous individuals tends to increase across tree size classes, with understory individuals typically remaining evergreen [@conditQuantifyingDeciduousnessTropical2000c]. 
-In temperate deciduous forests, leaf-emergence is delayed with height-ontogeny, with understory species leafing out earlier than canopy trees [@vitasseEarlierLeafoutRather2014; @seiwaChangesLeafPhenology1999].
 
 ### Interspecific variation 
 
@@ -283,7 +282,7 @@ Generally, the pattern of fundamental trait adaptation to light gradients across
 For instance, across tree size classes, there is an increase in the fractions of species that are isoprene-emitting (**REFS**) and deciduous [@conditQuantifyingDeciduousnessTropical2000c; @meakemRoleTreeSize2018].
 However, the range in trait values can be several times greater in multi-species canopy than in understory species, based on their inherent species-specific traits and responses to environmental conditions. 
 
-Therefore, $T_{leaf}$ patterns within forest ecosystems are underpinned by both intra- and inter-specific variation in traits. 
+Therefore, vertical gradients in $T_{leaf}$ and metabolism within forest ecosystems are underpinned by both intra- and inter-specific variation in traits. 
 
 ## Leaf metabolism and thermal responses
 
@@ -302,23 +301,22 @@ nocite: | @kafutiFoliarWoodTraits2020; @vanwittenbergheVariabilityStomatalConduc
 
 ### Stomatal conductance
 
-Maximum $g_s$ increases with light environment, and is thus higher in the sun exposed upper canopy than in subcanopy or understory leaves (Table 2). However, because of the high $VPD$ and irradiance experienced by sun leaves,  mid-day stomatal depression is more prevalent in sun leaves than shade leaves in closed forests.  $T_{leaf}$ of sun leaves thus further increases due to the lack of transpirational cooling [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994; @kosugiSeasonalFluctuationsTemperature2006]. In more open forests, midday stomatal closure can occur in both upper canopy and lower canopy leaves, with stomata of lower canopy leaves remaining closed for a longer time duration than upper canopy resulting in higher $T_{leaf}$, perhaps due to higher RH [Fig. `r fig_leaf_T`,@zweifelMiddayStomatalClosure2002]. Additionally, while $T_{opt}$ of $g_s$  did not differ significantly between sun and shade leaves in three tropical tree species [@slotPhotosyntheticHeatTolerance2019a], sun leaves in the upper canopy show a stronger decrease in $g_s$ to rising temperature than shade leaves in the lower canopy [@hernandezSimilarTemperatureDependence2020; @carterExperimentalWarmingTropical]. 
+Maximum $g_s$ increases with light environment, and is thus higher in the sun exposed upper canopy than in subcanopy or understory leaves (Table 2). However, because of the high VPD and irradiance experienced by sun leaves,  mid-day stomatal depression is more prevalent in sun leaves than shade leaves in closed forests.  $T_{leaf}$ of sun leaves thus further increases due to the lack of transpirational cooling [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994; @kosugiSeasonalFluctuationsTemperature2006]. In more open forests, midday stomatal closure can occur in both upper canopy and lower canopy leaves, with stomata of lower canopy leaves remaining closed for a longer time duration than upper canopy resulting in higher $T_{leaf}$, perhaps due to higher RH [Fig. `r fig_leaf_T`,@zweifelMiddayStomatalClosure2002]. The temperature at which $g_s$ is maximized, $T_{opt}$ of $g_s$, did not differ significantly between sun and shade leaves in three tropical tree species [@slotPhotosyntheticHeatTolerance2019a], sun leaves in the upper canopy show a stronger decrease in $g_s$ to rising $T_{air}$ than shade leaves in the lower canopy [@hernandezSimilarTemperatureDependence2020; @carterExperimentalWarmingTropical]. 
 
 ### Photosynthesis
 
 **Photosynthetic capacity is generally higher in exposed canopy positions-- a fact that is both theoretically expected and observed in numerous field studies (Table 2; Niinemets 2007 ; Kenzo et al. 2015 ; Slot et al. 2019; Chen et al. 2020).**
-This is primarily driven by the greater light available to sun-leaves, that also have traits (Table 1, Table 2) allowing greater photosynthetic rates at high light under sufficient nutrient and water conditions. Photosynthesis increases with irradiance, and saturates at quantum flux density of 400 $m^{-2}$ $s^{-1}$ to 700nm $m^{-2}$ $s^{-1}$. Light saturation levels differ between leaves and whole canopies with leaves saturating at lower light level than canopies; while a certain amount of light saturates the photosynthetic capacity of the leaf, increasing the amount of light in the canopy may increase photosynthesis in the shaded part of the canopy.
+This is primarily driven by the greater light available to sun-leaves, which also have traits allowing greater photosynthetic rates at high light under sufficient nutrient and water conditions (Table 1, Table 2). Photosynthesis increases with irradiance, and saturates at quantum flux density of 400 $m^{-2}$ $s^{-1}$ to 700nm $m^{-2}$ $s^{-1}$. Light saturation levels differ between leaves and whole canopies with leaves saturating at lower light level than canopies; while a certain amount of light saturates the photosynthetic capacity of the leaf, increasing the amount of light in the canopy may increase photosynthesis in the shaded part of the canopy.
 
-Temperature can affect photosynthesis via direct and indirect pathways--directly, by altering photosynthetic enzyme activity and electron transport chain, and indirectly through increased $VPD$ causing stomatal closure [@lloydEffectsRisingTemperatures2008]. Photosynthesis has a peaked response to temperature, with the peak commonly found to correspond to the prevalent ambient growing season conditions [@tanOptimumAirTemperature2017; @slotSituTemperatureResponse2017]. Beyond the optimum, photosynthesis decreases as a result of stomatal closure (e.g. @slotSituTemperatureResponse2017; @smithEmpiricalEvidenceResilience2020 [temperate/boreal refs needed), and eventually due to biochemical constraints [@kumarathungeAcclimationAdaptationComponents2019a; @sageTemperatureResponseC32007; @varhammarPhotosyntheticTemperatureResponses2015]. rreversible damage to photosystem II, leading to leaf necrosis and eventually leaf death occurs at $T_{leaf}$ of $40-60^{\circ}C$
-[Baker 2008; @feeley_thermal_2020].  
+Temperature can affect photosynthesis via direct and indirect pathways--directly, by altering photosynthetic enzyme activity and electron transport chain, and indirectly through increased VPD causing stomatal closure [@lloydEffectsRisingTemperatures2008]. Photosynthesis has a peaked response to $T_{air}$, with the peak commonly found to correspond to the prevalent ambient growing season conditions [@tanOptimumAirTemperature2017; @slotSituTemperatureResponse2017]. Beyond the optimum, photosynthesis decreases as a result of stomatal closure (e.g. @slotSituTemperatureResponse2017; @smithEmpiricalEvidenceResilience2020 [temperate/boreal refs needed), and eventually due to biochemical constraints [@kumarathungeAcclimationAdaptationComponents2019a; @sageTemperatureResponseC32007; @varhammarPhotosyntheticTemperatureResponses2015].
 
 **We have very little evidence as to how the temperature sensitivity of photosynthesis compares between sun and shade leaves.**
-Based on consistent positive relationships between growth temperature and $T_{opt}$ across sites and seasons [e.g. @tanOptimumAirTemperature2017; @kumarathungeAcclimationAdaptationComponents2019a], one might expect sun leaves to have a stronger temperature-dependence and higher temperature optima than shade leaves (Fig. 14.5) in [Campbell and Norman 1998; *revisit this!*; @niinemetsShapeLeafPhotosynthetic1999; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. However, such a trend is not apparent among recent studies, where for 3 species in Panama, the $T_{opt}$ for sun leaves tended to be moderately, but not significantly higher than that of shade leaves [@slotPhotosyntheticHeatTolerance2019a; @hernandezSimilarTemperatureDependence2020]. Similarly, $T_{opt}$ of the RuBP carboxylation  ($V_{max}$) and regeneration rates ($J_{max}$) didnot differ systematically between tropical sun and shade leaves [@hernandezSimilarTemperatureDependence2020], and along vertical gradients of tropical and temperate trees [@mau_temperate_2018; @millerOnlySunlitLeaves2021;@mau_temperate_2018]. In contrast, tropical experimental warming observations show that $T_{opt}$, and $T_{opt}$ of $J_{max}$ decrease from understory to canopy, potentially linked to greater thermal sensitivity of $g_s$ in upper canopy leaves [@carterExperimentalWarmingTropical 2021]. Higher maximum temperatures, and $g_s$ are known to influence leaf thermal sensitivity tolerance [@perezPhotosyntheticHeatTolerances2020], but exact mechanisms remain unclear.
+Based on consistent positive relationships between growth temperature and $T_{opt}$ across sites and seasons [e.g. @tanOptimumAirTemperature2017; @kumarathungeAcclimationAdaptationComponents2019a], one might expect sun leaves to have a stronger temperature-dependence and higher temperature optima than shade leaves [Campbell and Norman 1998; @niinemetsShapeLeafPhotosynthetic1999; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. However, such a trend is not apparent among recent studies, where for three species in Panama, the $T_{opt}$ for sun leaves tended to be moderately, but not significantly, higher than that of shade leaves [@slotPhotosyntheticHeatTolerance2019a; @hernandezSimilarTemperatureDependence2020]. Similarly, $T_{opt}$ of the RuBP carboxylation  ($V_{max}$) and regeneration rates ($J_{max}$) did not differ systematically between tropical sun and shade leaves [@hernandezSimilarTemperatureDependence2020], and along vertical gradients of tropical and temperate trees [@mau_temperate_2018; @millerOnlySunlitLeaves2021;@mau_temperate_2018]. In contrast, tropical experimental warming observations showed that $T_{opt}$, and $T_{opt}$ of $J_{max}$ decrease from understory to canopy, potentially linked to greater thermal sensitivity of $g_s$ in upper canopy leaves [@carterExperimentalWarmingTropical 2021]. Higher maximum temperatures, and $g_s$ are known to influence leaf thermal sensitivity [@perezPhotosyntheticHeatTolerances2020], but exact mechanisms remain unclear.
 
 @hernandezSimilarTemperatureDependence2020 also speculated that the observed lack of sun-shade differences in $T_{opt}$ may reflect acclimation to similar temperatures of peak photosynthesis. Sun leaves experience higher temperatures, but maximum temperatures are associated with conditions of mid-day stomatal depression, and acclimation to optimize photosynthesis at these temperatures would not be advantageous. Shade leaves that do not experience mid-day depression continue to fix carbon even when afternoon air temperatures peak [@millerOnlySunlitLeaves2021]. Evaluating this requires diurnal monitoring of net photosynthesis through the canopy.
  
-**Leaf photosynthetic thermal tolerance (Tcrit/ T50)**
-
+**Leaf photosynthetic thermal tolerance**
+Irreversible damage to photosystem II, leading to leaf necrosis and eventually leaf death, occurs at $T_{leaf}$ of $40-60^{\circ}C$ [Baker 2008; @feeley_thermal_2020]
 $T_{crit}$ is the temperature at which efficiency of photosystem II starts to decrease, based on chlorophyll a fluorescence; and $T_{50}$ represents temperature at which the efficiency of photosystem II had decreased by 50% [@slotLeafHeatTolerance2020]. 
 
 **Thermal tolerance (e.g., $T_{50}$) varies with exposure, but there are no studies isolating effect of height.**
