--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -316,12 +316,7 @@ Based on consistent positive relationships between growth temperature and $T_{op
 @hernandezSimilarTemperatureDependence2020 also speculated that the observed lack of sun-shade differences in $T_{opt}$ may reflect acclimation to similar temperatures of peak photosynthesis. Sun leaves experience higher temperatures, but maximum temperatures are associated with conditions of mid-day stomatal depression, and acclimation to optimize photosynthesis at these temperatures would not be advantageous. Shade leaves that do not experience mid-day depression continue to fix carbon even when afternoon air temperatures peak [@millerOnlySunlitLeaves2021]. Evaluating this requires diurnal monitoring of net photosynthesis through the canopy.
  
 **Leaf photosynthetic thermal tolerance**
-Irreversible damage to photosystem II, leading to leaf necrosis and eventually leaf death, occurs at $T_{leaf}$ of $40-60^{\circ}C$ [Baker 2008; @feeley_thermal_2020]
-$T_{crit}$ is the temperature at which efficiency of photosystem II starts to decrease, based on chlorophyll a fluorescence; and $T_{50}$ represents temperature at which the efficiency of photosystem II had decreased by 50% [@slotLeafHeatTolerance2020]. 
-
-**Thermal tolerance (e.g., $T_{50}$) varies with exposure, but there are no studies isolating effect of height.**
-
-*If we take geographic gradients as a reliable proxy, we'd expect temperature sensitivities to reflect the environment to which the trees are adapted/ acclimatized.* Global $T_{50s}$ across latitude and climate range from ~45-50$^\circ$C [@osullivanThermalLimitsLeaf2017], where $T_{50}$ and $T_{crit}$ decrease with elevation among tropical forests and across latitudes [@feeley_thermal_2020;  @slotLeafHeatTolerance2020; @osullivanThermalLimitsLeaf2017]. 
+Irreversible damage to photosystem II, leading to leaf necrosis and eventually leaf death, occurs at $T_{leaf}$ of $40-60^{\circ}C$ [@bakerChlorophyllFluorescenceProbe2008; @feeley_thermal_2020].Thermal tolerance is described in terms of the temperature at which efficiency of photosystem II starts to decrease, $T_{crit}$, and the $T_{leaf}$ at which efficiency of photosystem II had decreased by 50%, $T_{50}$ [@slotLeafHeatTolerance2020]. Thermal tolerance varies globally across latitude and climate, where $T_{50}$ and $T_{crit}$ decrease across latitudes, and with elevation among tropical forests [@feeley_thermal_2020;  @slotLeafHeatTolerance2021; @osullivanThermalLimitsLeaf2017].
 
 Leaf thermal tolerances are more closely adapted to microclimate than macroclimate [@feeley_thermal_2020; @slotPhotosyntheticPlasticityTropical2021]. Chinquapin oak (*Quercus muehlenbergii*) growing in xeric, sunnier conditions showed higher $T_{50}$ by $2{^\circ}C$ than bur oak (*Quercus macrocarpa*) growing in shaded mesic conditions [@hamerlynckPhotosyntheticStomatalResponses1996a]. Along a vertical gradient within canopy, *Acacia papyrocarpa* (Benth.) showed greater $T_{50}$ and higher composite climate stress in the lower north-facing canopy than other canopy positions, correlating with low wind-speed, greater $T_{air}$ and longer leaf thermal time constants [@curtis_intracanopy_2019]. Additionally, thermal tolerances are explained more by leaf traits than phylogeny [@feeley_thermal_2020; @slotPhotosyntheticPlasticityTropical2021]. $T_{crit}$ was found to be greater among tropical species with large leaves that had slow heating and cooling time, whereas $T_{50}$ was greater among species with greater LMA [@slotLeafHeatTolerance2020]. Across species sun leaves that experienced higher maximum temperatures show higher photosynthetic heat tolerance [@perezPhotosyntheticHeatTolerances2020]. However, considering sun and shade leaf differences within canopy (Table 1) $T_{50}$ varies modestly, being slightly lower for shade than sun leaves for two of three tree species in Panama [@slotPhotosyntheticHeatTolerance2019a]. Based on this evidence, we would expect leaves exposed to greater heat stress within the canopy to have higher heat tolerance, but further research is required to fully understand the relationship between heat tolerance, light exposure and microclimates.
 
